[package]
name = "thiscoin"
version = "0.1.0"
edition = "2024"

[workspace]
resolver = "2"
members = [
   "miner",
   "node",
   "wallet",
]

[dependencies]
ciborium = "0.2.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha256 = "1.6.0"
uint = "0.10.0"
uuid = { version = "1.21.0", features = ["v4", "serde"] }
