[package]
name = "thiscoin"
version = "0.1.0"
edition = "2024"

[workspace]
resolver = "2"
members = [
   "miner",
   "node",
   "wallet",
]

[dependencies]
chrono = { version = "0.4.43", features = ["serde"] }
ciborium = "0.2.2"
ecdsa = { version = "0.16.9", features = ["signing", "verifying", "serde", "pem"] }
hex = "0.4.3"
k256 = { version = "0.13.4", features = ["serde", "pem"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
uint = "0.10.0"
uuid = { version = "1.21.0", features = ["v4", "serde"] }
